samples-v0/Istio-v0/httpbin.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8080
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
      - image: docker.io/kong/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        # Same as found in Dockerfile's CMD but using an unprivileged port
        command:
        - gunicorn
        - -b
        - 0.0.0.0:8080
        - httpbin:app
        - -k
        - gevent
        ports:
        - containerPort: 8080

# sample app https://raw.githubusercontent.com/istio/istio/release-1.23/samples/httpbin/httpbin.yaml

# setup https://istio.io/latest/docs/setup/getting-started/

# https://istio.io/latest/docs/tasks/traffic-management/ingress/ingress-control/

# default profile sets up classic LB so try using minimal profile  and then setup ingress 

# kubectl config set-context --current --namespace=default
