samples-v0/Istio-v0/gateway-alb.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

# http://a5e2c593ce7f6404bb785d7aa5381f57-1151828649.us-east-1.elb.amazonaws.com/headers

# https://istio.io/latest/docs/setup/install/istioctl/

# istioctl install --manifests=manifests/

# istioctl uninstall --purge
